--- a/src/security-server/edc/runtime/identity-hub/build.gradle
+++ b/src/security-server/edc/runtime/identity-hub/build.gradle
@@ -1,3 +1,5 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
     id("java")
     id("application")
@@ -5,6 +7,8 @@ plugins {
 }
 
 configurations {
+    sqlDependencies
+
     configureEach {
         exclude group: 'org.eclipse.edc', module: 'jetty-core'
         exclude group: 'com.apicatalog', module: 'titanium-json-ld-jre8' //transient dep that creates errors
@@ -16,7 +20,6 @@ dependencies {
     runtimeOnly(libs.edc.config.filesystem)
     runtimeOnly(libs.edc.api.observability)
     runtimeOnly(libs.edc.vault.hashicorp)
-    //runtimeOnly(libs.bundles.sql.ih)
 
     runtimeOnly(libs.bundles.identity.api)
 
@@ -27,6 +30,8 @@ dependencies {
     implementation(libs.edc.ih.lib.credentialquery)
     implementation(libs.edc.lib.vp)
     implementation (libs.edc.lib.jsonld)
+
+    sqlDependencies(libs.bundles.sql.ih)
 
     implementation(project(":security-server:edc:extensions:xroad-conf"))
     implementation(project(":security-server:edc:extensions:xroad-jsonld"))
@@ -41,12 +46,42 @@ application {
     mainClass.set("org.eclipse.edc.boot.system.runtime.BaseRuntime")
 }
 
+var distTar = tasks.named("distTar")
+var distZip = tasks.named("distZip")
+
+sourceSets {
+    main {
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+}
+
+
 shadowJar {
     mergeServiceFiles()
-    archiveFileName.set("edc-identity-hub.jar")
+    archiveFileName.set("edc-identity-hub-inmemory.jar")
+    dependsOn(distTar, distZip)
 }
+
+tasks.register('shadowJarWithSql', ShadowJar) {
+    from sourceSets.main.output
+    configurations = [project.configurations.runtimeClasspath, project.configurations.sqlDependencies]
+    exclude('META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA')
+    archiveFileName.set("edc-identity-hub.jar")
+    manifest {
+        attributes 'Main-Class': 'org.eclipse.edc.boot.system.runtime.BaseRuntime'
+    }
+    mergeServiceFiles()
+    dependsOn(distTar, distZip)
+}
+
+processResources {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
+assemble.dependsOn("shadowJarWithSql")
 
 checkstyle {
     checkstyleMain.enabled = false
-    checkstyleTest.enabled = false
 }
