--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -25,8 +25,8 @@ swaggerParser = "2.1.22"
 logback = "1.5.7"
 logbackAccess = "2.0.3"
 apacheCxf = "4.0.5"
-edc = "0.8.1"
-edcJetty = "11.0.22"
+edc = "0.9.0"
+edcJetty = "11.0.23"
 nimbusJoseJwt = "9.39.1"
 dss = "6.0"
 caffeine = "3.1.8"
@@ -270,6 +270,7 @@ edc-dataplane-http = { module = "org.eclipse.edc:data-plane-http", version.ref =
 edc-dataplane-api-control = { module = "org.eclipse.edc:data-plane-control-api", version.ref = "edc" }
 edc-dataplane-api-public = { module = "org.eclipse.edc:data-plane-public-api-v2", version.ref = "edc" }
 edc-dataplane-api-signaling = { module = "org.eclipse.edc:data-plane-signaling-api", version.ref = "edc" }
+edc-dataplane-iam = { module = "org.eclipse.edc:data-plane-iam", version.ref = "edc" }
 edc-dataplane-util = { module = "org.eclipse.edc:data-plane-util", version.ref = "edc" }
 
 
