--- a/src/security-server/edc/runtime/data-plane/build.gradle
+++ b/src/security-server/edc/runtime/data-plane/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     runtimeOnly(libs.edc.dataplane.api.control.client)
     //runtimeOnly(libs.edc.dataplane.selfregistration) // currently we register dataplane instance manually
     runtimeOnly(libs.edc.dataplane.http)
-    runtimeOnly(libs.edc.dataplane.api.control)
+    runtimeOnly(libs.edc.dataplane.iam)
     //runtimeOnly(libs.edc.dataplane.api.public)
     runtimeOnly(libs.edc.dataplane.api.signaling)
     runtimeOnly(libs.edc.ext.jsonld) // needed by the DataPlaneSignalingApi
