--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -27,6 +27,23 @@
 
 plugins {
     alias(libs.plugins.shadow)
+    id 'maven-publish'
+}
+
+publishing {
+    publications {
+        shadow(MavenPublication) { publication ->
+            project.shadow.component(publication)
+            groupId = 'org.niis.xroad'
+            artifactId = "configuration-client"
+            version = xroadVersion + ("RELEASE".equals(xroadBuildType) ? "": "-SNAPSHOT")
+        }
+    }
+    repositories {
+        maven {
+            url = publishUrl
+        }
+    }
 }
 
 dependencies {
