--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -41,7 +41,7 @@ publishing {
     }
     repositories {
         maven {
-            url = publishUrl
+            url = xroadPublishUrl
         }
     }
 }
