--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.jvmargs=-Xmx1536m
 
 xroadVersion=7.6.0
 xroadBuildType=SNAPSHOT
+xroadPublishUrl=
 
 # SonarQube defaults
 sonarqubeHost=https://sonarcloud.io
