chore: enable publishing configuration-client jar to artifactory or local maven
Refs: XRDCAT-29

--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -42,6 +42,13 @@ publishing {
     repositories {
         maven {
             url = xroadPublishUrl
+            credentials {
+                username = xroadPublishUser
+                password = xroadPublishApiKey
+            }
+            authentication {
+                basic(BasicAuthentication)
+            }
         }
     }
 }
