--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -3,6 +3,8 @@ org.gradle.jvmargs=-Xmx1536m
 xroadVersion=7.6.0
 xroadBuildType=SNAPSHOT
 xroadPublishUrl=
+xroadPublishUser=
+xroadPublishApiKey=
 
 # SonarQube defaults
 sonarqubeHost=https://sonarcloud.io
