chore: enable publishing configuration-client jar to artifactory or local maven (#2320)
Refs: XRDCAT-29

--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -2,6 +2,9 @@ org.gradle.jvmargs=-Xmx1536m
 
 xroadVersion=7.6.0
 xroadBuildType=SNAPSHOT
+xroadPublishUrl=
+xroadPublishUser=
+xroadPublishApiKey=
 
 # SonarQube defaults
 sonarqubeHost=https://sonarcloud.io
