--- a/src/packages/src/xroad/default-configuration/addons/message-log.ini
+++ b/src/packages/src/xroad/default-configuration/addons/message-log.ini
@@ -68,3 +68,6 @@ message-body-logging=true
 
 ;If REST body size exceeds maximum loggable size, is it allowed to truncate the message in the log.
 ;truncated-body-allowed=false
+
+[common]
+global-conf-remoting-enabled = true
