--- a/src/packages/src/xroad/default-configuration/op-monitor.ini
+++ b/src/packages/src/xroad/default-configuration/op-monitor.ini
@@ -28,3 +28,6 @@ records-available-timestamp-offset-seconds=60
 ; The period in seconds that is used for gathering health statistics
 ; about services.
 health-statistics-period-seconds=600
+
+[common]
+global-conf-remoting-enabled = true
