--- a/src/packages/src/xroad/default-configuration/proxy.ini
+++ b/src/packages/src/xroad/default-configuration/proxy.ini
@@ -143,3 +143,6 @@ ocsp-cache-path=/var/cache/xroad
 
 ; Whether to require the token PIN code to adhere to the base policy
 enforce-token-pin-policy=false
+
+[common]
+global-conf-remoting-enabled = true
