--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -33,3 +33,4 @@ server:
 
 logging:
   config: file:/etc/xroad/conf.d/proxy-ui-api-logback.xml
+  config-access: file:/etc/xroad/conf.d/proxy-ui-api-logback-access.xml
