--- a/src/central-server/admin-service/int-test/build.gradle
+++ b/src/central-server/admin-service/int-test/build.gradle
@@ -56,3 +56,7 @@ tasks.register('intTest', Test) {
 tasks.named('check') {
     dependsOn tasks.named('intTest')
 }
+
+archUnit {
+    skip = true
+}
