--- a/src/central-server/management-service/int-test/build.gradle
+++ b/src/central-server/management-service/int-test/build.gradle
@@ -47,3 +47,7 @@ tasks.register('intTest', Test) {
 tasks.named('check') {
     dependsOn tasks.named('intTest')
 }
+
+archUnit {
+    skip = true
+}
