--- a/src/security-server/admin-service/int-test/build.gradle
+++ b/src/security-server/admin-service/int-test/build.gradle
@@ -55,3 +55,7 @@ tasks.register('intTest', Test) {
 tasks.named('check') {
     dependsOn tasks.named('intTest')
 }
+
+archUnit {
+    skip = true
+}
