--- a/src/security-server/edc/runtime/control-plane/build.gradle
+++ b/src/security-server/edc/runtime/control-plane/build.gradle
@@ -83,4 +83,8 @@ processResources {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
+archUnit {
+    skip = true
+}
+
 assemble.dependsOn("shadowJarWithSql")
