--- a/src/security-server/edc/runtime/data-plane/build.gradle
+++ b/src/security-server/edc/runtime/data-plane/build.gradle
@@ -91,4 +91,8 @@ processResources {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
+archUnit {
+    skip = true
+}
+
 assemble.dependsOn("shadowJarWithSql")
