feat: Use signer for signing & verifying signatures in EDC

--- a/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
@@ -13,8 +13,8 @@ web.http.resolution.port=20002
 
 edc.http.client.https.enforce=true
 
-# Required by IdentityHubCredentialInsertionExtension for private key retrieval
-edc.iam.sts.privatekey.alias=did:web:localhost-private-key
+# Required by IdentityHubCredentialInsertionExtension for signing VPs
+edc.did.key.id=key-id
 
 edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
