--- a/Docker/securityserver/files/edc/etc/edc-data-plane.properties
+++ b/Docker/securityserver/files/edc/etc/edc-data-plane.properties
@@ -8,8 +8,8 @@ web.http.xroad.public.port=9294
 web.http.xroad.public.path=/xroad/public
 web.http.xroad.public.needClientAuth=true
 
-edc.transfer.proxy.token.signer.privatekey.alias=did:web:localhost-private-key
-edc.transfer.proxy.token.verifier.publickey.alias=did:web:localhost#key-id
+edc.transfer.proxy.token.signer.privatekey.alias=key-id
+edc.transfer.proxy.token.verifier.publickey.alias=key-id
 
 edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
 
