--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -13,8 +13,8 @@ web.http.resolution.port=20001
 
 edc.http.client.https.enforce=true
 
-# Required by IdentityHubCredentialInsertionExtension for private key retrieval
-edc.iam.sts.privatekey.alias=did:web:localhost-private-key
+# Required by IdentityHubCredentialInsertionExtension for signing VPs
+edc.did.key.id=key-id
 
 # Support for JSON-LD (verifiable credentials)
 edc.jsonld.https.enabled=true
