--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -81,15 +81,17 @@ include "security-server:admin-service:ui"
 include "security-server:admin-service:int-test"
 include 'security-server:edc:spi:xroad-core-spi'
 include 'security-server:edc:spi:xroad-messagelog-spi'
-include 'security-server:edc:extensions:common:xroad-conf'
 include 'security-server:edc:extensions:control-plane:xroad-edr'
 include 'security-server:edc:extensions:control-plane:xroad-policy'
 include 'security-server:edc:extensions:control-plane:xroad-identity-and-trust'
+include 'security-server:edc:extensions:data-plane:xroad-data-plane-iam'
 include 'security-server:edc:extensions:data-plane:xroad-data-plane-public-api'
 include 'security-server:edc:extensions:data-plane:xroad-messagelog'
-include 'security-server:edc:extensions:common:xroad-webserver'
+include 'security-server:edc:extensions:common:xroad-conf'
 include 'security-server:edc:extensions:common:xroad-jsonld'
+include 'security-server:edc:extensions:common:xroad-jws-signer'
 include 'security-server:edc:extensions:common:xroad-ldp-verifiable-credentials'
+include 'security-server:edc:extensions:common:xroad-webserver'
 include 'security-server:edc-client'
 include 'security-server:edc:xroad-edc-security'
 include 'security-server:edc:runtime:control-plane'
