--- a/Docker/securityserver/files/edc/etc/edc-control-plane.properties
+++ b/Docker/securityserver/files/edc/etc/edc-control-plane.properties
@@ -17,7 +17,7 @@ edc.http.client.https.enforce=true
 
 ### IAM ###
 edc.iam.issuer.id=did:web:localhost
-edc.iam.sts.privatekey.alias=did:web:localhost-private-key
+edc.iam.sts.privatekey.alias=key-id
 edc.iam.sts.publickey.id=did:web:localhost#key-id
 
 edc.iam.did.web.use.https=true
