--- a/Docker/xrd-dev-stack/compose.dev.yaml
+++ b/Docker/xrd-dev-stack/compose.dev.yaml
@@ -67,6 +67,13 @@ services:
       - "4600:8080"
     networks:
       - xroad-network
+  mailpit:
+    container_name: mailpit
+    ports:
+      - "8025:8025"
+      - "1025:1025"
+    networks:
+      - xroad-network
   hurl:
     networks:
       - xroad-network
