--- a/src/security-server/system-test/src/intTest/resources/application-override.yml
+++ b/src/security-server/system-test/src/intTest/resources/application-override.yml
@@ -32,6 +32,9 @@ test-automation:
       ca-server:
         enabled: true
         reuse-between-runs: ${reuse-between-runs}
+      mail-server:
+        enabled: true
+        reuse-between-runs: ${reuse-between-runs}
   selenide:
     browser: CHROME # Options: CHROME, EDGE, FIREFOX, OPERA, SAFARI (works only with Mac)
     browser-size: "1920x1080"
