feat(CS): EC key support for global configuration
it works

Refs: XRDDEV-2695

--- a/Docker/centralserver/files/etc/xroad/services/local.conf
+++ b/Docker/centralserver/files/etc/xroad/services/local.conf
@@ -2,3 +2,4 @@ XROAD_CS_ADMIN_SERVICE_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,addre
 XROAD_CS_MANAGEMENT_SERVICE_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9951,server=y,suspend=n $XROAD_CS_MANAGEMENT_SERVICE_PARAMS"
 XROAD_CS_REGISTRATION_SERVICE_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9952,server=y,suspend=n $XROAD_CS_REGISTRATION_SERVICE_PARAMS"
 XROAD_CONFCLIENT_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9953,server=y,suspend=n $XROAD_CONFCLIENT_PARAMS"
+XROAD_SIGNER_PARAMS="$XROAD_SIGNER_PARAMS -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9994,server=y,suspend=n $SIGNER_JMX_PARAMS $SIGNER_TELEMETRY_PARAMS"
