--- a/src/packages/src/xroad/default-configuration/override-securityserver-fi.ini
+++ b/src/packages/src/xroad/default-configuration/override-securityserver-fi.ini
@@ -1,7 +1,7 @@
 ; FI security server configuration overrides
 
 [signer]
-; Auth and sign key length (2048/3072/4096 bits)
+; Auth and sign key length (2048/3072/4096 bits) for RSA
 key-length=3072
 enforce-token-pin-policy=true
 ; Certificate signing request signature digest algorithm,
