--- a/src/packages/src/xroad/default-configuration/override-securityserver-fo.ini
+++ b/src/packages/src/xroad/default-configuration/override-securityserver-fo.ini
@@ -1,6 +1,6 @@
 ; FO security server configuration overrides
 
 [signer]
-; Auth and sign key length (2048/3072/4096 bits)
+; Auth and sign key length (2048/3072/4096 bits) for RSA
 key-length=3072
 enforce-token-pin-policy=true
