--- a/src/packages/src/xroad/default-configuration/signer.ini
+++ b/src/packages/src/xroad/default-configuration/signer.ini
@@ -14,8 +14,14 @@ client-timeout=50000
 ; Full class name of module instance provider
 ;module-instance-provider=com.foo.barImpl
 
-; Auth and sign key length (2048/3072/4096 bits)
+; Key algorithm for generating new keys (RSA/EC)
+;default-key-algorithm = RSA
+
+; Auth and sign key length (2048/3072/4096 bits) for RSA
 key-length=2048
+
+; Auth and sign key named curve (secp256r1/secp384r1/secp521r1 or other supported curve name) for ECDSA
+key-named-curve=secp256r1
 
 ; Certificate signing request signature digest algorithm,
 ; possible values: SHA-256, SHA-384, SHA-512
