--- a/src/packages/src/xroad/default-configuration/override-securityserver-ee.ini
+++ b/src/packages/src/xroad/default-configuration/override-securityserver-ee.ini
@@ -1,7 +1,7 @@
 ; EE security server configuration overrides
 
 [signer]
-; Auth and sign key length (2048/3072/4096 bits)
+; Auth and sign key length (2048/3072/4096 bits) for RSA
 key-length=3072
 ; Enforce PIN policy
 enforce-token-pin-policy=true
