--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -99,6 +99,9 @@ include 'security-server:edc:runtime:data-plane'
 include 'security-server:edc:runtime:identity-hub'
 include "security-server:system-test"
 include 'security-server:e2e-test'
+include 'security-server:configuration-service'
+include 'security-server:configuration-service:migration-cli'
+include 'security-server:configuration-service:application'
 
 // Utils
 include "signer-console"
