--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -63,6 +63,13 @@ bootJar {
     }
 }
 
+//shadowJar {
+//    exclude('**/module-info.class')
+//    archiveClassifier = ''
+//    archiveBaseName = 'configuration-client'
+//    mergeServiceFiles()
+//}
+
 jar.enabled = false
 
 tasks.register('runConfigurationClient', JavaExec) {
