chore: split configuration-client into application and core

--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -38,6 +38,7 @@ include "proxy:core"
 include "signer"
 include "configuration-proxy"
 include "configuration-client:application"
+include "configuration-client:core"
 include "asicverifier"
 include "asic-util"
 include "monitor"
