--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -44,7 +44,8 @@ include "asicverifier"
 include "asic-util"
 include "monitor"
 include "monitor-common"
-include "op-monitor-daemon"
+include "op-monitor-daemon:application"
+include "op-monitor-daemon:core"
 include "shared-ui"
 
 include "central-server"
