--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -20,6 +20,8 @@ sourceSets {
 }
 
 dependencies {
+    implementation(platform(libs.springBoot.bom))
+
     implementation project(':common:common-core')
     implementation project(':common:common-jetty')
     implementation project(':common:common-verifier')
