--- a/src/addons/messagelog/messagelog-addon/asic/build.gradle
+++ b/src/addons/messagelog/messagelog-addon/asic/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation(project(':common:common-messagelog'))
     implementation(project(':common:common-op-monitoring'))
     implementation(project(':common:common-verifier'))
-    implementation(project(':proxy:application'))
+    implementation(project(':proxy:core'))
     implementation(project(':serverconf'))
 
 }
